[package]
name = "ceres_front"
version = "0.1.0"
license = "MIT"
edition = "2021"
description = "A Gameboy/Color emulator"

[dependencies]
ceres_core = { path = "../ceres_core" }
clap = { version = "*", default-features = false, features = ["std", "help"] }
cpal = { version = "*", default-features = false }
parking_lot = { version = "*", default-features = false }
anyhow = { version = "*" }
wgpu = { version = "*", default-features = false, features = ["spirv"] }
# TODO: wait for better wayland decoration support
winit = { version = "*", default-features = false, features = ["x11"] }
pollster = { version = "*", default-features = false }
bytemuck = { version = "*", features = ["derive"] }
