[package]
name = "ceres_sdl"
version = "0.1.0"
license = "MIT"
edition = "2021"
description = "A Gameboy/Color emulator"

[dependencies]
ceres_core = { path = "../ceres_core" }
glow = "*"
clap = { version = "*", default-features = false, features = ["std"] }
const_format = "*"
cpal = "*"
dasp_ring_buffer = "*"
glutin = { version = "*" }
winit = { version = "*" }
glutin-winit = { version = "*" }
raw-window-handle = "*"
